# scratch

./: .gitignore  README.md
calibr8/data-pipeline/: .gitignore  Makefile  prompt.md
calibr8/data-pipeline/cli/: main.go
calibr8/data-pipeline/pkg/chain/: client.go
calibr8/data-pipeline/pkg/pipeline/: pipeline.go
rbit-trader/: Cargo.toml  example-config.toml
rbit-trader/src/: main.rs
