[package]
name = "rbit-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version="1.0.217", features = ["derive"] }
serde_json = "1.0.137"
solana-client = "2.1.11"
solana-program = "2.1.11"
solana-sdk = "2.1.11"
tokio = {version="1.43.0", features=["full"]}
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
solana-transaction-status = "2.1.11"
config = "0.15.6"
solana-pubkey = "2.1.11"
